Slider tweaks and scaffolding content

--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -59,5 +59,45 @@ html
                   h2(class="text-lg underline md:py-3") Issue #05
                   h3(class="text-xl font-bold py-3 md:py-6") Name TBA
                   p(class="md:text-lg") This is the end of phase 1 and the first comic to be entirely in color!
+      header.hidden.p-4(class='dark:bg-gray-200 dark:text-gray-800 mt-10 md:block')
+        .container.flex.justify-between.h-16.mx-auto(class='md:justify-center md:space-x-8')
+          ul.items-stretch.space-x-3(class='md:flex')
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Comics
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Characters
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent dark:text-blue-400 dark:border-blue-400') Locations
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Behind the Scenes
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Links
+      .container.mx-auto.max-w-2xl
+        div.my-24
+          h2.my-4.text-center.text-2xl.font-bold Characters
+          ul.items-stretch.space-x-3(class='md:flex')
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Anak
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Ang Mata
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent dark:text-blue-400 dark:border-blue-400') Bulawan Dakong Umang
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Jim
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') President Serena Barbate
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Ryoko
+          ul.items-stretch.space-x-3(class='md:flex')
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') The Founder
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Old Turtle City
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') The Visayans
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Tom
+            li.flex
+              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Umang
     script(src="./alpine.js")
     script(src='./main.js')
