Adding character thumbs

--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -75,29 +75,36 @@ html
       .container.mx-auto.max-w-2xl
         div.my-24
           h2.my-4.text-center.text-2xl.font-bold Characters
-          ul.items-stretch.space-x-3(class='md:flex')
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Anak
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Ang Mata
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent dark:text-blue-400 dark:border-blue-400') Bulawan Dakong Umang
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Jim
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') President Serena Barbate
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Ryoko
-          ul.items-stretch.space-x-3(class='md:flex')
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') The Founder
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Old Turtle City
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') The Visayans
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Tom
-            li.flex
-              a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Umang
+          ul.items-center.my-2(class='grid grid-flow-col auto-cols-max')
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Anak')
+                img.max-w-none.object-cover(width=50 height=50 src="assets/characters/Anak.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ang Mata')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Ang Mata.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Bulawan Dakong Umang')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Bulawan Dakong Umang.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Jim')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Jim.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='President Serena Barbate')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/President Serena Barbate.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ryoko')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Ryoko.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='The Founder')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/The Founder.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='The Visayans')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/The Visayans.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Tom')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Tom.svg")
+            li
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Umang')
+                img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Umang.svg")
     script(src="./alpine.js")
     script(src='./main.js')
