--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -59,9 +59,9 @@ html
                   h2(class="text-lg underline md:py-3") Issue #05
                   h3(class="text-xl font-bold py-3 md:py-6") Name TBA
                   p(class="md:text-lg") This is the end of phase 1 and the first comic to be entirely in color!
-      header.hidden.p-4(class='dark:bg-gray-200 dark:text-gray-800 mt-10 md:block')
+      header.p-4(class='dark:bg-gray-200 dark:text-gray-800 mt-10 md:block')
         .container.flex.justify-between.h-16.mx-auto(class='md:justify-center md:space-x-8')
-          ul.items-stretch.space-x-3(class='md:flex')
+          ul.items-stretch.space-x-3(class='flex')
             li.flex
               a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Comics
             li.flex
