--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -61,7 +61,7 @@ html
                   p(class="md:text-lg") This is the end of phase 1 and the first comic to be entirely in color!
       header.p-4(class='dark:bg-gray-200 dark:text-gray-800 mt-10 md:block')
         .container.flex.justify-between.h-16.mx-auto(class='md:justify-center md:space-x-8')
-          ul.items-stretch.space-x-3(class='flex')
+          ul.items-stretch.space-x-6(class='flex')
             li.flex
               a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Comics
             li.flex
@@ -73,7 +73,7 @@ html
             li.flex
               a.flex.items-center.px-4.mx-4.-mb-1.border-b-2(rel='noopener noreferrer' href='#' class='dark:border-transparent') Links
       .container.mx-auto.max-w-2xl
-        div.my-24
+        div.mt-24.mb-12
           h2.my-4.text-center.text-2xl.font-bold Characters
           ul.items-center.my-2(class='grid grid-flow-col auto-cols-max')
             li.p-2.m-2
@@ -106,5 +106,63 @@ html
             li
               a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Umang')
                 img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Umang.svg")
+          div.py-12
+            img.float-right(width=384 height=216 src="assets/characters/Anak.svg")
+            h3.my-4.text-xl.font-bold Anak
+            p.
+              Species: Balubid
+            br
+            p.
+              Born: 1535 AD on Camiguin Island in the Philippines
+            br
+            p.
+              Bio:
+              The last Balubid, Anak's egg was found by Nick in the 16th century on under the Santo Nino cold spring in Camiguin Island in the Philippines.
+            p.
+              It's implied there was previously an ice glacier under the Santo Nino cold spring.
+      .container.mx-auto.max-w-4xl
+        div.my-12
+          h2.my-8.text-center.text-2xl.font-bold Locations
+          .relative
+            img.mx-auto(src="assets/locations/Shangri Lah.svg")
+            div.absolute.text-white(class="p-2 md:p-8 bottom-2 md:bottom-8 top-1216 md:top-32 left-2 md:left-8 right-2 md:right-8 max-w-[100%] md:max-w-[35%]" style="background: rgba(0,0,0,0.5);")
+              p The last Balubid, Anak's egg was found by Nick in the 16th century on under the Santo Nino cold spring in Camiguin Island in the Philippines.
+              br
+              p It's implied there was previously an ice glacier under the Santo Nino cold spring. The last Balubid, Anak's egg was found by Nick in the 16th.
+              br
+        div.my-12
+          ul.items-center.my-2(class='grid grid-cols-2 gap-4 p-4 mx-auto md:grid-cols-3')
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Bulawan City')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Bulawan.svg")
+                h3.my-4.text-xl.font-bold.text-center Bulawan City
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Camiguin Island')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Camiguin.svg")
+                h3.my-4.text-xl.font-bold.text-center Camiguin Island
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Helios Shuttle')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Helios.svg")
+                h3.my-4.text-xl.font-bold.text-center Helios Shuttle
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ibalhin Control')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Ibalhin.svg")
+                h3.my-4.text-xl.font-bold.text-center Ibalhin Control
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Kamigen Island')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Kamigen.svg")
+                h3.my-4.text-xl.font-bold.text-center Kamigen Island
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Makaptan\'s Lair')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Makaptan.svg")
+                h3.my-4.text-xl.font-bold.text-center Makaptan's Lair
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Old Turtle City')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Old Turtle City.svg")
+                h3.my-4.text-xl.font-bold.text-center Old Turtle City
+            li.p-2.m-2
+              a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Shangri Lah')
+                img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Shangri Lah.svg")
+                h3.my-4.text-xl.font-bold.text-center Shangri Lah
     script(src="./alpine.js")
     script(src='./main.js')
