--- a/new/src/index.pug
+++ b/new/src/index.pug
@@ -164,5 +164,71 @@ html
               a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Shangri Lah')
                 img.max-w-none.object-cover(width=260 height=260 src="assets/locations/icons/Shangri Lah.svg")
                 h3.my-4.text-xl.font-bold.text-center Shangri Lah
+        div.my-12
+          h2.my-8.text-center.text-2xl.font-bold Behind the Scenes
+          .ui.grid.gap-4(class="grid-flow-cols grid-cols-1 md:grid-cols-3")
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?1', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Late August Production Update
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?2', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Mobile UX Development
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?3', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Pages 125-128 are out! 
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?4', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Old Turtle City Diagrams
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?5', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Pages 121-124 are out!
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+            .p-6.gradient-grey
+              img.object-cover.object-center.w-full.h-72(src='https://source.unsplash.com/random/300x300/?6', alt='', class='bg-gray-500')
+              .mt-4.mb-2
+                h2.text-xl.font-semibold.tracking-wide Reclaiming the lost Visayan culture
+              p
+                | Mauris et lorem at ullamcorper elit tristique dignissim et ullamcorper elit. In sed feugiat mi. Etiam ut lacinia dui.
+        div.my-12
+          h2.my-8.text-2xl.font-bold.text-center Links
+          .ui.grid.gap-4(class="grid-flow-cols grid-cols-1 md:grid-cols-4")
+            .p-4
+              h3.my-4.text-xl.font-bold Kamigen Online
+              p Some of our other pages, we hope you like them!
+              br
+              a.block.my-2.p-4.gradient-light-grey(href='#') Facebook
+              a.block.my-2.p-4.gradient-light-grey(href='#') Github
+              a.block.my-2.p-4.gradient-light-grey(href='#') Instagram
+              a.block.my-2.p-4.gradient-light-grey(href='#') Merchandise
+            .p-4
+              h3.my-4.text-xl.font-bold Look who's tweeting
+              p People talking about Kamigen on Twitter
+            .p-4
+              h3.my-4.text-xl.font-bold Visayan Culture
+              p Learn more about Visayan culture.
+              br
+              a.block.my-2.p-4.gradient-light-grey(href='#') Akopito
+              a.block.my-2.p-4.gradient-light-grey(href='#') Aswang Project
+              a.block.my-2.p-4.gradient-light-grey(href='#') Filipiknow
+            .p-4
+              h3.my-4.text-xl.font-bold About
+              p Kamigen is a solarpunk world based around Visayan culture.
+              p This media franchise is independently developed by Open Studios.
+      .container.mx-auto.max-w-7xl
+        .float-right.p-8 © 2022 Open Studios
     script(src="./alpine.js")
     script(src='./main.js')
