--- a/new/src/styles/main.css
+++ b/new/src/styles/main.css
@@ -37,6 +37,22 @@
 
 }
 
+.gradient-grey {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cccccc+0,cccccc+100&1+0,0+100 */
+    background: -moz-linear-gradient(top,  rgba(204,204,204,1) 0%, rgba(204,204,204,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(204,204,204,1) 0%,rgba(204,204,204,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(204,204,204,1) 0%,rgba(204,204,204,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#00cccccc',GradientType=0 ); /* IE6-9 */
+}
+
+.gradient-light-grey {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cccccc+0,ffffff+100&0.25+0,0+100 */
+    background: -moz-linear-gradient(top,  rgba(204,204,204,0.25) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(204,204,204,0.25) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(204,204,204,0.25) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40cccccc', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+}
+
 .keen-slider__slide {
     img {
         @apply flex-row max-h-96;
